idea/testData/multiModuleHighlighting/multiplatform/headerWithoutImplForBoth/common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual in module js for JS"><error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual in module jvm for JVM">My</error></error> {

}
